# pangeo-forge-orchestrator

./: .coveragerc  .dockerignore  .gitignore  .gitleaksignore  .gitmodules  .pre-commit-config.yaml  .prettierignore  .prettierrc.toml  .sops.yaml  Dockerfile  Dockerfile.heroku  Procfile  README.md  age-recipients.txt  alembic.ini  app.json  codecov.yml  dataflow-container-image.txt  docker-compose.yml  heroku.yml  mypy.ini  pyproject.toml  requirements.txt  security.md  setup.cfg  setup.py  sops-kms-arn.txt  tox.ini
.github/: labels-definition.yaml
.github/scripts/: get_all_repos.py
.github/workflows/: build-review-app.yaml  dataflow-integration-test.yaml  delete-review-app.yaml  gitleaks.yaml  labels.yaml  main.yaml  push-dataflow-image.yaml  slash-command-dispatch.yaml  test-dataflow-integration.yaml  test-db-backup.yaml  test-docker.yaml  test-local.yaml  tests.yml
bakeries/: pangeo-ldeo-nsf-earthcube.local.yaml  pangeo-ldeo-nsf-earthcube.pangeo-forge-staging.yaml  pangeo-ldeo-nsf-earthcube.pangeo-forge.yaml  pangeo-ldeo-nsf-earthcube.pforge-local-cisaacstern.yaml  pangeo-ldeo-nsf-earthcube.pforge-pr-149.yaml  pangeo-ldeo-nsf-earthcube.pforge-pr-157.yaml  pangeo-ldeo-nsf-earthcube.pforge-pr-80.yaml
bakeries/compute/: pangeo-ldeo-nsf-earthcube.yaml
bakeries/storage/: osn.yaml
config/: __init__.py
config/local/: deployment.py
config/pangeo_forge/: config.py  deployment.py
config/pangeo_forge_staging/: config.py
config/pforge_local_cisaacstern/: config.py  deployment.py
config/pforge_pr_204/: config.py
config/prod/: deployment.py
config/staging/: deployment.py
db-backup/: 810fa5e1-9b78-4f3c-97e0-a1847b3a65e6  test_db_backup.py
docs/: .readthedocs.yml  Makefile  README.md  api_spec.md  architecture.md  conf.py  database-api.md  deploy-heroku.md  deploy-local.md  development_guide.md  github-app.md  github_app.md  heroku.md  index.md  migrations.md  motivation.md  new_pydantic_types.md  next_steps.md  quick_start.md  recipe-feedstock-sequence.md  repo-structure.md  requirements.txt  roadmap.md  security.md  sequence-diagrams.md  state_diagram.md  structural_view.md  testing.md  testing_strategy.md  use_guide.md
docs/dev-guide/: abstract.md  database-api.md  github-app.md  security.md
migrations/: env.py
migrations/versions/: 0499cef6b57a_remove_api_keys.py  22828222f2fe_add_bakery_table.py  5c6ae59e3861_add_api_keys.py  6197f9c7aff6_add_bakery_and_feedstock.py  70bcddc9fffa_add_dataset_fields.py  788675cfe27c_initial_migration.py  81c7d27bde71_initial_migration.py  8652cc287dd5_add_dataset.py  b0ec74f6d899_add_api_keys.py
pangeo_forge_orchestrator/: _version.py  abstractions.py  api.py  catalog.py  cli.py  client.py  components.py  config.py  database.py  dependencies.py  entrypoint.py  http.py  interfaces.py  logging.py  main.py  metadata.py  model_builders.py  models.py  notebook.py  security.py  server.py  utils.py
pangeo_forge_orchestrator/catalog/: generate.py  item_template.json
pangeo_forge_orchestrator/cli/: bakery.py  catalog.py  main.py  recipe.py
pangeo_forge_orchestrator/commands/: base.py  down.py  release.py  up.py
pangeo_forge_orchestrator/configurables/: __init__.py  deployment.py  fastapi.py  github_app.py  spawner.py  types.py
pangeo_forge_orchestrator/meta_types/: bakery.py  feedstock.py  versions.py
pangeo_forge_orchestrator/routers/: flow.py  github_app.py  logs.py  model_router.py  prefect.py  repr.py  security.py  stats.py
pangeo_forge_orchestrator/spawners/: base.py  local_subprocess.py
pangeo_forge_orchestrator/validation/: __init__.py  exceptions.py  validate_bakery_database.py
pangeo_forge_prefect/: automation_hook_manager.py  flow_manager.py
pangeo_forge_prefect/meta_types/: bakery.py  meta.py
postdeploy/: seed_review_app_data.py
scripts/: generate_api_key.py  initialize_database.py  new_dev_app.py  new_github_app.py  update_hook_url.py
scripts.deploy/: release.sh  review-app-postdeploy.sh  run.sh  seed_review_app_data.py  seed_test_data.py  sops.sh  test.sh
scripts.develop/: generate_api_key.py  initialize_database.py  new_github_app.py  update_hook_url.py
secrets/: bakery-args.pangeo-ldeo-nsf-earthcube.yaml  bakery-env.pangeo-ldeo-nsf-earthcube.yaml  config.dev-app-proxy.yaml  config.dev.yaml  config.local.yaml  config.pangeo-forge-staging.yaml  config.pangeo-forge.yaml  config.pforge-local-andersy005.yaml  config.pforge-local-cisaacstern.yaml  config.pforge-pr-125.yaml  config.pforge-pr-136.yaml  config.pforge-pr-143.yaml  config.pforge-pr-149.yaml  config.pforge-pr-150.yaml  config.pforge-pr-157.yaml  config.pforge-pr-80.yaml  config.review.yaml  dataflow-job-submission.json  dataflow-status-monitoring.json  github_app_config.dev.yaml  github_app_config.yaml  sops-kms-arn.txt  terraform.tfstate  terraform.tfstate.backup
terraform/dev/: main.tf
terraform/pangeo-forge/: main.tf
terraform/pangeo-forge-staging/: main.tf
test/: test_automation_hook_manager.py  test_flow_manager.py
test/data/: bakeries.yaml  classes.py  meta.yaml  meta_azure.yaml  recipe.py  recipe_dict.py
tests/: check_stdout.py  cli_test_funcs.py  conftest.py  entrypoints.py  helpers.py  http_auth_server.py  interfaces.py  mock-feedstock@1.0.json  model_fixtures.py  test_api.py  test_bakery.py  test_bakery_cli.py  test_catalog.py  test_catalog_cli.py  test_cli.py  test_client.py  test_components.py  test_config.py  test_database.py  test_feedstock_cli.py  test_github_app.py  test_interfaces.py  test_main.py  test_meta_types.py  test_metadata_objects.py  test_recipe_cli.py  test_runner.py  test_security.py  test_server.py  test_validation.py
tests.integration/: test_dataflow.py
tests/cli/: check_stdout.py  test_bakery_cli.py  test_catalog_cli.py  test_feedstock_cli.py  test_recipe_cli.py
tests/github_app/: fixtures.py  mock_gidgethub.py  mock_pangeo_forge_runner.py  test_GET_routes.py  test_POST_check_suite_event.py  test_POST_dataflow_event.py  (+9 more)
tests_/: conftest.py  conftest_mock.py  conftest_stubs.py  fixture_models.py  test_POST_synchronize_event.py  test_handle_pr_synchronize_or_opened_event.py
(+22 files in other folders)
