[tool.poetry]
name = "pangeo-forge-orchestrator"
version = "0.1"
description = "Tools for introspecting and executing the various modular components of Pangeo Forge."
authors = ["cisaacstern <62192187+cisaacstern@users.noreply.github.com>"]
license = "Apache 2.0"

[tool.poetry.dependencies]
python = "^3.8"
typer = {extras = ["all"], version = "^0.4.0"}
pangeo-forge-recipes = "^0.6.0"

[tool.poetry.dev-dependencies]

[tool.poetry.scripts]
pangeo-forge = "pangeo_forge_orchestrator.cli.main:app"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
