[metadata]
name = pangeo-forge-orchestrator
description = Tools for introspecting and executing the various modular components of Pangeo Forge.
long_description = file:README.md
long_description_content_type = text/markdown
maintainer = Charles Stern
maintainer_email = cstern@ldeo.columbia.edu
classifiers =
    Development Status :: 1 - Planning
    License :: OSI Approved :: Apache Software License
    Operating System :: OS Independent
    Intended Audience :: Science/Research
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Topic :: Scientific/Engineering

url = https://github.com/pangeo-forge/pangeo-forge-orchestrator
license = Apache
keywords = pangeo, data

[options]
zip_safe = False
python_requires = >=3.8
packages = find:
include_package_data = True
install_requires =
    fastapi >= 0.70.0
    sqlmodel >= 0.0.4
    typer >= 0.4.0
    # cf_xarray >= 0.6.1
    # fsspec >= 2021.10.0
    # gcsfs >= 2021.10.0
    # pangeo-forge-recipes >= 0.6.1
    # pydantic >= 1.8.2
    # rich >= 10.12.0
    # s3fs >= 2021.10.0
    # shapely >= 1.7.1
    # xstac @ git+https://github.com/cisaacstern/xstac@cfxr

[options.extras_require]
dev =
    alembic
    codecov
    pre-commit
    pytest
    pytest-sugar
    pytest-cov
    pytest-lazy-fixture
    types-requests
    uvicorn >= 0.15.0
    gunicorn

[options.entry_points]
console_scripts =
    pangeo-forge = pangeo_forge_orchestrator.cli:cli

[flake8]
max-line-length = 100

[isort]
known_first_party=pangeo_forge_orchestrator
known_third_party=alembic,fastapi,pytest,pytest_lazyfixture,requests,setuptools,sqlalchemy,sqlmodel,typer
multi_line_output=3
include_trailing_comma=True
force_grid_wrap=0
combine_as_imports=True
line_length=100

[tool:pytest]
log_cli = False
# timeout = 30
# timeout_method = signal

# remove this once rechunker executors are factored into a standalone package
# that exports type hints (https://mypy.readthedocs.io/en/latest/installed_packages.html#installed-packages)

[mypy]
plugins = pydantic.mypy
show_error_codes = True

[mypy-fsspec.*]
ignore_missing_imports = True
[mypy-yaml.*]
ignore_missing_imports = True
[mypy-requests.exceptions.*]
ignore_missing_imports = True
