[metadata]
name = pangeo-forge-orchestrator
description = Tools for introspecting and executing the various modular components of Pangeo Forge.
long_description = file:README.md
long_description_content_type = text/markdown
maintainer = Charles Stern
maintainer_email = cstern@ldeo.columbia.edu
classifiers =
    Development Status :: 1 - Planning
    License :: OSI Approved :: Apache Software License
    Operating System :: OS Independent
    Intended Audience :: Science/Research
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Topic :: Scientific/Engineering

url = https://github.com/pangeo-forge/pangeo-forge-orchestrator
license = Apache
keywords = pangeo, data

[options]
zip_safe = False
python_requires = >=3.8
packages = find:
include_package_data = True
install_requires =
    aiohttp >= 3.8.1
    fastapi >= 0.70.0
    gidgethub >= 5.1.0
    sqlmodel >= 0.0.7  # https://github.com/tiangolo/sqlmodel/issues/315#issuecomment-1229239354
    psycopg2-binary  # for postgres
    # note: production gets `pangeo-forge-runner` from
    # git+https://github.com/yuvipanda/pangeo-forge-runner@main,
    # but i'm not sure how to use github deps in setup.cfg
    pangeo-forge-runner == 0.4

[options.extras_require]
dev =
    alembic
    codecov
    pre-commit
    pytest
    pytest-sugar
    pytest-cov
    pytest-lazy-fixture
    pytest-mock
    pytest-asyncio
    types-requests
    uvicorn >= 0.15.0
    gunicorn
    httpx
    asgi-lifespan  # https://github.com/tiangolo/fastapi/issues/2003#issuecomment-801140731

[options.entry_points]
console_scripts =
    pangeo-forge = pangeo_forge_orchestrator.cli:cli

[flake8]
ignore =
max-line-length = 100
max-complexity = 18
select = B,C,E,F,W,T4,B9
extend-ignore = E203,E501,E402,W605,W503

[isort]
known_first_party=pangeo_forge_orchestrator
known_third_party=aiohttp,alembic,asgi_lifespan,cryptography,fastapi,gidgethub,httpx,jwt,pydantic,pytest,pytest_asyncio,pytest_lazyfixture,requests,setuptools,sqlalchemy,sqlmodel,starlette,yaml
multi_line_output=3
include_trailing_comma=True
force_grid_wrap=0
combine_as_imports=True
line_length=100

[tool:pytest]
log_cli = False
# timeout = 30
# timeout_method = signal

# remove this once rechunker executors are factored into a standalone package
# that exports type hints (https://mypy.readthedocs.io/en/latest/installed_packages.html#installed-packages)

[mypy]
plugins = pydantic.mypy
show_error_codes = True

[mypy-fsspec.*]
ignore_missing_imports = True
[mypy-yaml.*]
ignore_missing_imports = True
[mypy-requests.exceptions.*]
ignore_missing_imports = True
