[metadata]
name = pangeo-forge-orchestrator
description = Tools for introspecting and executing the various modular components of Pangeo Forge.
long_description = file:README.md
long_description_content_type = text/markdown
maintainer = Charles Stern
maintainer_email = cstern@ldeo.columbia.edu
classifiers =
    Development Status :: 1 - Planning
    License :: OSI Approved :: Apache Software License
    Operating System :: OS Independent
    Intended Audience :: Science/Research
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Topic :: Scientific/Engineering

url = https://github.com/pangeo-forge/pangeo-forge-orchestrator
license = Apache
keywords = pangeo, data

[options]
zip_safe = False
python_requires = >=3.8
packages = find:
include_package_data = True
install_requires =
    aiohttp >= 3.8.1
    fastapi >= 0.87.0
    gidgethub >= 5.1.0
    sqlmodel >= 0.0.8
    psycopg2-binary  # for postgres
    pangeo-forge-runner == 0.7.0

[options.extras_require]
dev =
    alembic
    codecov
    pre-commit
    pytest
    pytest-sugar
    pytest-cov
    pytest-lazy-fixture
    pytest-mock
    pytest-asyncio
    types-requests
    uvicorn >= 0.15.0
    gunicorn
    httpx >= 0.22
    asgi-lifespan  # https://github.com/tiangolo/fastapi/issues/2003#issuecomment-801140731

[options.entry_points]
console_scripts =
    pangeo-forge = pangeo_forge_orchestrator.cli:cli


[tool:pytest]
log_cli = False
# timeout = 30
# timeout_method = signal

# remove this once rechunker executors are factored into a standalone package
# that exports type hints (https://mypy.readthedocs.io/en/latest/installed_packages.html#installed-packages)

[mypy]
plugins = pydantic.mypy
show_error_codes = True

[mypy-fsspec.*]
ignore_missing_imports = True
[mypy-yaml.*]
ignore_missing_imports = True
[mypy-requests.exceptions.*]
ignore_missing_imports = True
